# napari-hdf5-activity

./: .gitignore  .pre-commit-config.yaml  AVI_INTEGRATION_README.md  AVI_METADATA_EXAMPLE.json  AVI_USAGE_GUIDE.md  EXTENDED_ANALYSIS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PUBLICATION_SUMMARY.md  README.md  create_avi_metadata.py  generate_test_data.py  process_avi_batch.py  pyproject.toml  test_baseline_calculation.py  test_multiprocessing.py  test_multiprocessing_6roi_5000frames.py  test_multiprocessing_timing.py  test_real_data_performance.py  tox.ini
.claude/: settings.local.json
docs/: CIRCADIAN_ANALYSIS.md  USER_GUIDE.md
src/napari_hdf5_activity/: __init__.py  _avi_reader.py  _calc.py  _calc_adaptive.py  _calc_calibration.py  _calc_integration.py  _calc_parallel.py  _circadian_coherence.py  _circadian_fft.py  _circadian_similarity.py  _fisher_analysis.py  _metadata.py  _plot.py  _reader.py  _widget.py  napari.yaml
src/napari_hdf5_activity/Backup/: __init__.py  _calc.py  _calc_adaptive.py  _calc_calibration.py  _calc_integration.py  _metadata.py  _plot.py  _reader.py  _widget.py
src/napari_hdf5_activity/_tests/: test_reader.py  test_widget.py
