[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-hdf5-activity"
version = "0.1.0"
description = "HDF5 Activity Analysis Plugin for Napari"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@domain.com"},
]
license = {text = "MIT"}
dependencies = [
    "napari[all]>=0.4.18",
    "qtpy>=2.0.0",
    "opencv-python>=4.5.0",
    "h5py>=3.0.0",
    "matplotlib>=3.5.0",
    "psutil>=5.8.0",
    "numpy>=1.20.0",
]

[project.entry-points."napari.manifest"]
napari-hdf5-activity = "napari_hdf5_activity:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]
include = ["napari_hdf5_activity*"]
